# sorger_shor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: shor_cirq_circuits.py
src/: shor.ipynb
src/experiments/: requirements.txt  shor.py
src/experiments/config/: config.json  config.py
src/experiments/e1/: README.md
src/experiments/e1/results/: average_mean.json  average_mean_no_lucky_guesses.json  times_no_lucky_guesses.json
src/experiments/e1/results/visualization/: visualization.py
src/experiments/e2/: README.md  RMTL_Shor_Normal_QFT.py  RMTL_Shor_Sequential_QFT.py  script.py
src/experiments/e2/results/: average_mean_normal.json  times_normal.json
src/experiments/e2/results/visualization/: ana.py  visualization_compare.py
src/experiments/e3/: README.md  script.py
src/experiments/e3/results/: average_mean.json  average_mean_no_lucky_guesses.json  times_no_lucky_guesses.json
src/experiments/e3/results/visualization/: ana.py  visualization_compare.py  visualization_compare_all.py
src/experiments/e4/: README.md
src/sorger_shor/: README.md  experiment.py  shor.py  time_tracker.py
src/sorger_shor/e1/: script.py
src/sorger_shor/e1/results/: times.json
src/sorger_shor/e1/results/visualization/: visualization_no_lucky_guesses.py
src/sorger_shor/e2/results/: average_mean_sequential.json  times_sequential.json
src/sorger_shor/e3/: data.json
src/sorger_shor/e3/results/: times.json
src/sorger_shor/e4/: data.json  script.py
src/sorger_shor/e4/results/: results.json
(+5 files in other folders)
